# faster-rwkv

./: .gitignore  CMakeLists.txt  README.md  faster_rwkvd.cpp  faster_rwkvd.h  model.cpp  model.h  sampler.cpp  soc_detect.cpp  tensor.cpp  tensor.h  tokenizer.cpp  utils.h  web_rwkv_ffi.h
.github/workflows/: build-test.yml
aar/: build_aar.sh  build_aar_qnn.sh
cmake/: disable_unused_ncnn_layers.cmake
examples/: CMakeLists.txt  abc_music.cpp  midi_music.cpp
examples/shared_lib/: abc_music.cpp  abc_music_lib  midi_music.cpp
ffi/: faster_rwkvd.dart  pubspec.yaml
kernels/: graph_backend.h  kernels.h
kernels/cpu/: allocator.cpp  softmax.cpp
kernels/default/: init_model.cpp  model_forward.cpp  model_forward_seq.cpp
kernels/export-ncnn/: kernels.cpp
kernels/mtk/: README.md  extra.h  init_model.cpp  model_forward.cpp  rwkv_mtk.cpp
kernels/mtk/include/: rwkv_mtk.h
kernels/ncnn/: init_model.cpp
kernels/qnn/: README.md  extra.h  init_model.cpp  model_forward.cpp
kernels/qnn/include/: librwkv-qualcomm.h
kernels/rwkv.cpp/: extra.h  init_model.cpp  model_forward.cpp
tools/: CMakeLists.txt  convert_state.py  convert_weight.py  eval_text.cpp
